<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="xyz.sudocoding.befearless.fragments.HomeFragment"
    android:animateLayoutChanges="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/profileImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/fab_margin"
            android:paddingBottom="@dimen/fab_margin"
            app:srcCompat="@android:drawable/sym_def_app_icon"/>

        <TextView
            android:id="@+id/user_name_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:text="User"
            android:textSize="24sp"
            android:textAlignment="center"/>

        <Button
            android:id="@+id/share_location_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/share_location_btn"
            android:textColor="@color/white"
            android:backgroundTint="@color/alizarin"/>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/location_sub_btn_layout"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <Button
                android:id="@+id/share_loc_default_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/share_location_default"
                android:textColor="@color/white"
                android:backgroundTint="@color/wetasphalt"
                android:layout_marginRight="8dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/share_loc_social_btn"
                android:layout_marginLeft="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="8dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp"
                app:layout_constraintHorizontal_bias="0.759" />

            <Button
                android:id="@+id/share_loc_social_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/share_location_social"
                android:textColor="@color/white"
                android:backgroundTint="@color/wetasphalt"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="8dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="33dp"
                app:layout_constraintLeft_toLeftOf="parent" />

        </android.support.constraint.ConstraintLayout>

        <Button
            android:id="@+id/send_msg_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send_message"
            android:textColor="@color/white"
            android:backgroundTint="@color/belizhole"/>

        <Button
            android:id="@+id/make_call_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/make_call"
            android:textColor="@color/white"
            android:backgroundTint="@color/nephritis"/>

    </LinearLayout>

</FrameLayout>
